// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-components sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "background": {
      "body": "#12182B",
      "content": "#232B43",
      "secondaryNav": "#1C2235",
    },
    "badges": {
      "blue": {
        "dot": {
          "color": "rgba(152,95,152,0.2)",
        },
        "filled": {
          "background": "#985f98",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "#985f98",
          "text": "#985f98",
        },
      },
      "dotBorder": "#6F768F",
      "gray": {
        "dot": {
          "color": "#C1C7DC",
        },
        "filled": {
          "background": "#FFFFFF",
          "text": "#6F768F",
        },
        "light": {
          "background": "rgba(111,118,143,0.2)",
          "text": "#E1E4ED",
        },
      },
      "green": {
        "dot": {
          "color": "#008000",
        },
        "filled": {
          "background": "#008000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(0,128,0,0.1)",
          "text": "#008000",
        },
      },
      "red": {
        "dot": {
          "color": "#ff5f5f",
        },
        "filled": {
          "background": "#ff5f5f",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,95,95,0.2)",
          "text": "#ff5f5f",
        },
      },
      "yellow": {
        "dot": {
          "color": "#FFFF00",
        },
        "filled": {
          "background": "#FFFF00",
          "text": "#959500",
        },
        "light": {
          "background": "rgba(255,255,0,0.1)",
          "text": "#FFFF00",
        },
      },
    },
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#FF0000",
        "color": "rgb(255,249,249)",
      },
      "default": {
        "background": "#808080",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "#6F768F",
        "color": "rgb(250,250,251)",
      },
      "info": {
        "background": "#0000FF",
        "color": "rgb(235,235,255)",
      },
      "primary": {
        "background": "#800080",
        "color": "rgb(230,221,230)",
      },
      "success": {
        "background": "#008000",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#FFFF00",
        "color": "rgb(81,81,0)",
      },
    },
    "buttons": {
      "blue": {
        "filled": {
          "background": "#985f98",
          "backgroundHover": "rgba(152,95,152,0.7)",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(152,95,152,0.2)",
          "backgroundHover": "rgba(152,95,152,0.1)",
          "text": "#985f98",
        },
        "outlined": {
          "backgroundHover": "rgba(152,95,152,0.1)",
          "border": "rgba(152,95,152,0.5)",
          "text": "#985f98",
        },
        "subtle": {
          "backgroundHover": "rgba(152,95,152,0.2)",
          "text": "#985f98",
        },
      },
      "disabledBackground": "rgba(246,247,252,0.1)",
      "gray": {
        "filled": {
          "background": "#6F768F",
          "backgroundHover": "#394261",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(111,118,143,0.2)",
          "backgroundHover": "rgba(111,118,143,0.1)",
          "text": "#F6F7FC",
        },
        "outlined": {
          "backgroundHover": "rgba(111,118,143,0.1)",
          "border": "rgba(111,118,143,0.6)",
          "text": "#F6F7FC",
        },
        "subtle": {
          "backgroundHover": "rgba(111,118,143,0.3)",
          "text": "#F6F7FC",
        },
      },
      "red": {
        "filled": {
          "background": "#ff5f5f",
          "backgroundHover": "rgba(255,95,95,0.7)",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,95,95,0.2)",
          "backgroundHover": "rgba(255,95,95,0.1)",
          "text": "#ff5f5f",
        },
        "outlined": {
          "backgroundHover": "rgba(255,95,95,0.1)",
          "border": "rgba(255,191,191,0.4)",
          "text": "#ff5f5f",
        },
        "subtle": {
          "backgroundHover": "rgba(255,95,95,0.2)",
          "text": "#ff5f5f",
        },
      },
    },
    "cards": {
      "background": "#394261",
      "border": "#1C2235",
    },
    "charts": {
      "containerBackground": "#F6F7FC",
      "containerBorder": "#E1E4ED",
      "cyan": {
        "fill": "rgba(0,0,255,0.2)",
        "markerColor": "#0000FF",
        "textColor": "#FFFFFF",
      },
      "highlight": "#0000FF",
      "lines": "#394261",
    },
    "contrast": {
      "danger": "rgb(255,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(235,235,255)",
      "primary": "rgb(230,221,230)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(81,81,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ff6969",
        "color": "rgb(255,250,250)",
      },
      "default": {
        "background": "#a29b9b",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269fb",
        "color": "rgb(250,250,255)",
      },
      "primary": {
        "background": "#a2699b",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729b69",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#e8e832",
        "color": "rgb(90,90,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#bfe7ff",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(20,20,20,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
      "textSecondary": "rgba(246,247,252,0.6)",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "icons": {
      "active": "rgba(246,247,252,0.7)",
      "disabled": "rgba(246,247,252,0.5)",
      "icon": "#E1E4ED",
    },
    "input": {
      "background": "#1C2235",
      "backgroundDisabled": "#181d2e",
      "border": "rgba(183,183,183,0.74)",
      "borderFocus": "#0000f2",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,242,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "link": {
      "default": "#985f98",
      "disabled": "rgba(240,235,240,0.5)",
      "hover": "#b797b7",
    },
    "menu": {
      "default": {
        "activeBackground": "rgba(152,95,152,0.2)",
        "activeColor": "#985f98",
        "color": "#F6F7FC",
        "hover": "rgba(57,66,97,0.2)",
      },
      "red": {
        "color": {
          "active": "rgba(255,95,95,0.2)",
          "color": "#ff5f5f",
        },
      },
    },
    "misc": {
      "divider": "#060C1F",
      "logoColor": "#F6F7FC",
      "stripedBackground": "rgba(57,66,97,0.35)",
    },
    "newsCards": {
      "background": "#252D47",
    },
    "notification": {
      "background": "#394261",
      "blue": "#985f98",
      "border": "#394261",
      "green": "#5f985f",
      "progressBackground": "#252D47",
      "red": "#ff5f5f",
    },
    "pagination": {
      "active": {
        "background": "#0000FF",
        "border": "#0000FF",
        "color": "#FFFFFF",
      },
    },
    "section": {
      "filled": {
        "background": "#1C2235",
        "border": "#060C1F",
      },
    },
    "severity": {
      "high": "rgba(255,0,0,0.75)",
      "low": "rgba(111,118,143,0.75)",
      "medium": "rgba(37,45,71,0.75)",
      "success": "rgba(35,43,67,0.75)",
    },
    "table": {
      "head": {
        "background": "transparent",
      },
      "highlightBackground": "#0000FF",
      "highlightBorder": "#9797ff",
      "highlightText": "#F6F7FC",
      "row": {
        "background": "transparent",
        "backgroundExpanded": "#252D47",
        "backgroundHover": "#394261",
        "backgroundStriped": "rgba(6,12,31,0.2)",
        "divider": "#060C1F",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#f20000",
        "info": "#0000f2",
        "primary": "#790079",
        "success": "#007900",
        "warning": "#f2f200",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#bd0000",
        "info": "#0000bd",
        "primary": "#5f005f",
        "success": "#005f00",
        "warning": "#bdbd00",
      },
    },
    "tabs": {
      "active": "#985f98",
      "hover": "#6F768F",
    },
    "text": {
      "disabled": "rgba(246,247,252,0.5)",
      "primary": "#F6F7FC",
      "secondary": "rgba(246,247,252,0.6)",
      "severity": {
        "danger": "#5f985f",
        "success": "#008000",
      },
    },
    "variant": {
      "danger": "#FF0000",
      "dark": {
        "danger": "#ff5f5f",
        "default": "#989898",
        "gray": "#394261",
        "info": "#5f5fff",
        "primary": "#985f98",
        "success": "#5f985f",
        "warning": "#ffff5f",
      },
      "darker": {
        "danger": "#ffbfbf",
        "default": "#d1d1d1",
        "gray": "#C1C7DC",
        "info": "#bfbfff",
        "primary": "#d1bfd1",
        "success": "#bfd1bf",
        "warning": "#ffffbf",
      },
      "darkest": {
        "danger": "#ffebeb",
        "default": "#f0f0f0",
        "gray": "#F6F7FC",
        "info": "#ebebff",
        "primary": "#f0ebf0",
        "success": "#ebf0eb",
        "warning": "#ffffeb",
      },
      "default": "#808080",
      "gray": "#252D47",
      "info": "#0000FF",
      "light": {
        "danger": "#f20000",
        "default": "#797979",
        "gray": "#232B43",
        "info": "#0000f2",
        "primary": "#790079",
        "success": "#007900",
        "warning": "#f2f200",
      },
      "lighter": {
        "danger": "#bd0000",
        "default": "#5f5f5f",
        "gray": "#12182B",
        "info": "#0000bd",
        "primary": "#5f005f",
        "success": "#005f00",
        "warning": "#bdbd00",
      },
      "lightest": {
        "danger": "#950000",
        "default": "#4b4b4b",
        "gray": "#060C1F",
        "info": "#000095",
        "primary": "#4b004b",
        "success": "#004b00",
        "warning": "#959500",
      },
      "primary": "#800080",
      "success": "#008000",
      "warning": "#FFFF00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #f0f0f0;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #4b4b4b;
      color: #f0f0f0;
    }

    .ace_print-margin {
      width: 1px;
      background: #4b4b4b;
    }

    .ace_cursor {
      color: #797979;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #5f5f5f;
      }
    }

    .ace_gutter-active-line {
      background-color: #5f5f5f;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #bfbfff;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #d1bfd1;
    }

    .ace_constant.ace_other {
      color: #d1d1d1;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #f20000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #800080;
    }

    .ace_fold {
      background-color: #0000FF;
      border-color: #f0f0f0;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000FF;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #ffffbf;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #bfd1bf;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #f20000;
    }

    .ace_comment {
      color: #989898;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #FF0000;
        border-color: #ff3535;
        color: rgb(255,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ee262b;
          border-color: #ee3e41;
          color: #eee9ea;
        }

        &.active {
          background-color: #ff4a4a;
          border-color: #ff5b5b;
          color: rgb(255,249,249);

          &:hover {
            background-color: #ee4e51;
            border-color: #ee5c5e;
            color: #eee9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #ff6969;
          border-color: #ff5b5b;
          color: rgb(255,250,250);

          &:hover {
            background-color: #ff6969;
            border-color: #ff5b5b;
            color: rgb(255,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000FF;
        border-color: #3935fe;
        color: rgb(235,235,255);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426ef;
          border-color: #3f3eee;
          color: #dcdcef;
        }

        &.active {
          background-color: #514afd;
          border-color: #635bfc;
          color: rgb(249,249,255);

          &:hover {
            background-color: #534eed;
            border-color: #625cec;
            color: #e8e9ef;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269fb;
          border-color: #635bfc;
          color: rgb(250,250,255);

          &:hover {
            background-color: #7269fb;
            border-color: #635bfc;
            color: rgb(250,250,255);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #bfe7ff;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #bfe7ff;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #bfe7ff;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #800080;
        border-color: #893587;
        color: rgb(230,221,230);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #7b267e;
          border-color: #833e84;
          color: #d7cfd8;
        }

        &.active {
          background-color: #924a8e;
          border-color: #9a5b95;
          color: rgb(251,249,251);

          &:hover {
            background-color: #8b4e8a;
            border-color: #925c90;
            color: #eae9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #a2699b;
          border-color: #9a5b95;
          color: rgb(251,250,251);

          &:hover {
            background-color: #a2699b;
            border-color: #9a5b95;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #008000;
        border-color: #398735;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #247c2b;
          border-color: #3f8241;
          color: #e8eaea;
        }

        &.active {
          background-color: #518e4a;
          border-color: #63955b;
          color: rgb(249,251,249);

          &:hover {
            background-color: #538851;
            border-color: #628f5e;
            color: #e8ebea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729b69;
          border-color: #63955b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729b69;
            border-color: #63955b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #FFFF00;
        border-color: #f9fa19;
        color: rgb(81,81,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #eeee2b;
          border-color: #e8ea31;
          color: #53542b;
        }

        &.active {
          background-color: #f4f423;
          border-color: #eeee2b;
          color: rgb(77,77,11);

          &:hover {
            background-color: #e4e436;
            border-color: #dedf3b;
            color: #4f512d;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #e8e832;
          border-color: #eeee2b;
          color: rgb(90,90,19);

          &:hover {
            background-color: #e8e832;
            border-color: #eeee2b;
            color: rgb(90,90,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #252D47;
        border-color: #434457;
        color: rgb(191,192,195);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #31384f;
          border-color: #47495b;
          color: #b4b5b9;
        }

        &.active {
          background-color: #585664;
          border-color: #686470;
          color: rgb(249,249,250);

          &:hover {
            background-color: #595866;
            border-color: #666470;
            color: #e8e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #77717b;
          border-color: #686470;
          color: rgb(250,250,250);

          &:hover {
            background-color: #77717b;
            border-color: #686470;
            color: rgb(250,250,250);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "dark",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;

exports[`styled-components sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "background": {
      "body": "#F6F7FC",
      "content": "#FFFFFF",
      "secondaryNav": "#E1E4ED",
    },
    "badges": {
      "blue": {
        "dot": {
          "color": "rgba(128,0,128,0.1)",
        },
        "filled": {
          "background": "#800080",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "#800080",
          "text": "#800080",
        },
      },
      "dotBorder": "#C1C7DC",
      "gray": {
        "dot": {
          "color": "#6F768F",
        },
        "filled": {
          "background": "#FFFFFF",
          "text": "#6F768F",
        },
        "light": {
          "background": "rgba(111,118,143,0.1)",
          "text": "#252D47",
        },
      },
      "green": {
        "dot": {
          "color": "#008000",
        },
        "filled": {
          "background": "#008000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(0,128,0,0.1)",
          "text": "#006d00",
        },
      },
      "red": {
        "dot": {
          "color": "#FF0000",
        },
        "filled": {
          "background": "#FF0000",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,0,0,0.1)",
          "text": "#FF0000",
        },
      },
      "yellow": {
        "dot": {
          "color": "#FFFF00",
        },
        "filled": {
          "background": "#FFFF00",
          "text": "#959500",
        },
        "light": {
          "background": "rgba(255,255,0,0.1)",
          "text": "#d8d800",
        },
      },
    },
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#FF0000",
        "color": "rgb(255,249,249)",
      },
      "default": {
        "background": "#808080",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "rgba(193,199,220,0.4)",
        "color": "rgba(43,44,49,0.9700000000000002)",
      },
      "info": {
        "background": "#0000FF",
        "color": "rgb(235,235,255)",
      },
      "primary": {
        "background": "#800080",
        "color": "rgb(230,221,230)",
      },
      "success": {
        "background": "#008000",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#FFFF00",
        "color": "rgb(81,81,0)",
      },
    },
    "buttons": {
      "blue": {
        "filled": {
          "background": "#800080",
          "backgroundHover": "#985f98",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(128,0,128,0.1)",
          "backgroundHover": "rgba(128,0,128,0.05)",
          "text": "#800080",
        },
        "outlined": {
          "backgroundHover": "rgba(128,0,128,0.1)",
          "border": "#d1bfd1",
          "text": "#800080",
        },
        "subtle": {
          "backgroundHover": "rgba(128,0,128,0.2)",
          "text": "#800080",
        },
      },
      "disabledBackground": "rgba(37,45,71,0.08)",
      "gray": {
        "filled": {
          "background": "#6F768F",
          "backgroundHover": "#C1C7DC",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(111,118,143,0.1)",
          "backgroundHover": "rgba(111,118,143,0.05)",
          "text": "#252D47",
        },
        "outlined": {
          "backgroundHover": "rgba(111,118,143,0.1)",
          "border": "#C1C7DC",
          "text": "#252D47",
        },
        "subtle": {
          "backgroundHover": "rgba(111,118,143,0.2)",
          "text": "#252D47",
        },
      },
      "red": {
        "filled": {
          "background": "#FF0000",
          "backgroundHover": "#ff5f5f",
          "text": "#FFFFFF",
        },
        "light": {
          "background": "rgba(255,0,0,0.1)",
          "backgroundHover": "rgba(255,0,0,0.05)",
          "text": "#FF0000",
        },
        "outlined": {
          "backgroundHover": "rgba(255,0,0,0.1)",
          "border": "#ffbfbf",
          "text": "#FF0000",
        },
        "subtle": {
          "backgroundHover": "rgba(255,0,0,0.1)",
          "text": "#FF0000",
        },
      },
    },
    "cards": {
      "background": "#FFFFFF",
      "border": "#E1E4ED",
    },
    "charts": {
      "containerBackground": "#F6F7FC",
      "containerBorder": "#E1E4ED",
      "cyan": {
        "fill": "rgba(0,0,255,0.2)",
        "markerColor": "#0000FF",
        "textColor": "#FFFFFF",
      },
      "highlight": "#0000FF",
      "lines": "#E1E4ED",
    },
    "contrast": {
      "danger": "rgb(255,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(235,235,255)",
      "primary": "rgb(230,221,230)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(81,81,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ff6969",
        "color": "rgb(255,250,250)",
      },
      "default": {
        "background": "#a29b9b",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269fb",
        "color": "rgb(250,250,255)",
      },
      "primary": {
        "background": "#a2699b",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729b69",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#e8e832",
        "color": "rgb(90,90,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#5b85b8",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(245,246,248,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
      "textSecondary": "rgba(37,45,71,0.6)",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "icons": {
      "active": "rgba(37,45,71,0.7)",
      "disabled": "rgba(37,45,71,0.4)",
      "icon": "#394261",
    },
    "input": {
      "background": "#0b42ff",
      "backgroundDisabled": "#0a39dd",
      "border": "#C1C7DC",
      "borderFocus": "#5f5fff",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(95,95,255,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "link": {
      "default": "#800080",
      "disabled": "rgba(37,45,71,0.4)",
      "hover": "#790079",
    },
    "menu": {
      "default": {
        "activeBackground": "rgba(128,0,128,0.1)",
        "activeColor": "#800080",
        "color": "#252D47",
        "hover": "rgba(111,118,143,0.1)",
      },
      "red": {
        "color": {
          "active": "rgba(255,0,0,0.1)",
          "color": "#FF0000",
        },
      },
    },
    "misc": {
      "divider": "#E1E4ED",
      "logoColor": "#252D47",
      "stripedBackground": "#F6F7FC",
    },
    "newsCards": {
      "background": "#E1E4ED",
    },
    "notification": {
      "background": "#FFFFFF",
      "blue": "#e4dae4",
      "border": "#E1E4ED",
      "green": "#dae4da",
      "progressBackground": "#252D47",
      "red": "#ffdada",
    },
    "pagination": {
      "active": {
        "background": "#0000FF",
        "border": "#0000FF",
        "color": "#FFFFFF",
      },
    },
    "section": {
      "filled": {
        "background": "#F6F7FC",
        "border": "#E1E4ED",
      },
    },
    "severity": {
      "high": "rgba(255,0,0,0.75)",
      "low": "rgba(111,118,143,0.75)",
      "medium": "rgba(37,45,71,0.75)",
      "success": "rgba(35,43,67,0.75)",
    },
    "table": {
      "head": {
        "background": "transparent",
      },
      "highlightBackground": "#0000FF",
      "highlightBorder": "#9797ff",
      "highlightText": "#F6F7FC",
      "row": {
        "background": "transparent",
        "backgroundExpanded": "#FFFFFF",
        "backgroundHover": "#E1E4ED",
        "backgroundStriped": "rgba(193,199,220,0.1)",
        "divider": "#E1E4ED",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ff5f5f",
        "info": "#5f5fff",
        "primary": "#985f98",
        "success": "#5f985f",
        "warning": "#ffff5f",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ffbfbf",
        "info": "#bfbfff",
        "primary": "#d1bfd1",
        "success": "#bfd1bf",
        "warning": "#ffffbf",
      },
    },
    "tabs": {
      "active": "#800080",
      "hover": "#C1C7DC",
    },
    "text": {
      "disabled": "rgba(37,45,71,0.4)",
      "primary": "#252D47",
      "secondary": "rgba(37,45,71,0.6)",
      "severity": {
        "danger": "#008000",
        "success": "#007900",
      },
    },
    "variant": {
      "danger": "#FF0000",
      "dark": {
        "danger": "#f20000",
        "default": "#797979",
        "gray": "#232B43",
        "info": "#0000f2",
        "primary": "#790079",
        "success": "#007900",
        "warning": "#f2f200",
      },
      "darker": {
        "danger": "#bd0000",
        "default": "#5f5f5f",
        "gray": "#12182B",
        "info": "#0000bd",
        "primary": "#5f005f",
        "success": "#005f00",
        "warning": "#bdbd00",
      },
      "darkest": {
        "danger": "#950000",
        "default": "#4b4b4b",
        "gray": "#060C1F",
        "info": "#000095",
        "primary": "#4b004b",
        "success": "#004b00",
        "warning": "#959500",
      },
      "default": "#808080",
      "gray": "#252D47",
      "info": "#0000FF",
      "light": {
        "danger": "#ff5f5f",
        "default": "#989898",
        "gray": "#394261",
        "info": "#5f5fff",
        "primary": "#985f98",
        "success": "#5f985f",
        "warning": "#ffff5f",
      },
      "lighter": {
        "danger": "#ffbfbf",
        "default": "#d1d1d1",
        "gray": "#C1C7DC",
        "info": "#bfbfff",
        "primary": "#d1bfd1",
        "success": "#bfd1bf",
        "warning": "#ffffbf",
      },
      "lightest": {
        "danger": "#ffebeb",
        "default": "#f0f0f0",
        "gray": "#F6F7FC",
        "info": "#ebebff",
        "primary": "#f0ebf0",
        "success": "#ebf0eb",
        "warning": "#ffffeb",
      },
      "primary": "#800080",
      "success": "#008000",
      "warning": "#FFFF00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #4b4b4b;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #f0f0f0;
      color: #4b4b4b;
    }

    .ace_print-margin {
      width: 1px;
      background: #f0f0f0;
    }

    .ace_cursor {
      color: #989898;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #d1d1d1;
      }
    }

    .ace_gutter-active-line {
      background-color: #d1d1d1;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #0000bd;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #5f005f;
    }

    .ace_constant.ace_other {
      color: #5f5f5f;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #ff5f5f;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #800080;
    }

    .ace_fold {
      background-color: #0000FF;
      border-color: #4b4b4b;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000FF;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #bdbd00;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #005f00;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #ff5f5f;
    }

    .ace_comment {
      color: #797979;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #FF0000;
        border-color: #ff3535;
        color: rgb(255,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ee262b;
          border-color: #ee3e41;
          color: #eee9ea;
        }

        &.active {
          background-color: #ff4a4a;
          border-color: #ff5b5b;
          color: rgb(255,249,249);

          &:hover {
            background-color: #ee4e51;
            border-color: #ee5c5e;
            color: #eee9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #ff6969;
          border-color: #ff5b5b;
          color: rgb(255,250,250);

          &:hover {
            background-color: #ff6969;
            border-color: #ff5b5b;
            color: rgb(255,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000FF;
        border-color: #3935fe;
        color: rgb(235,235,255);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426ef;
          border-color: #3f3eee;
          color: #dcdcef;
        }

        &.active {
          background-color: #514afd;
          border-color: #635bfc;
          color: rgb(249,249,255);

          &:hover {
            background-color: #534eed;
            border-color: #625cec;
            color: #e8e9ef;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269fb;
          border-color: #635bfc;
          color: rgb(250,250,255);

          &:hover {
            background-color: #7269fb;
            border-color: #635bfc;
            color: rgb(250,250,255);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #5b85b8;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #5b85b8;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #5b85b8;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #800080;
        border-color: #893587;
        color: rgb(230,221,230);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #7b267e;
          border-color: #833e84;
          color: #d7cfd8;
        }

        &.active {
          background-color: #924a8e;
          border-color: #9a5b95;
          color: rgb(251,249,251);

          &:hover {
            background-color: #8b4e8a;
            border-color: #925c90;
            color: #eae9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #a2699b;
          border-color: #9a5b95;
          color: rgb(251,250,251);

          &:hover {
            background-color: #a2699b;
            border-color: #9a5b95;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #008000;
        border-color: #398735;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #247c2b;
          border-color: #3f8241;
          color: #e8eaea;
        }

        &.active {
          background-color: #518e4a;
          border-color: #63955b;
          color: rgb(249,251,249);

          &:hover {
            background-color: #538851;
            border-color: #628f5e;
            color: #e8ebea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729b69;
          border-color: #63955b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729b69;
            border-color: #63955b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #FFFF00;
        border-color: #f9fa19;
        color: rgb(81,81,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #eeee2b;
          border-color: #e8ea31;
          color: #53542b;
        }

        &.active {
          background-color: #f4f423;
          border-color: #eeee2b;
          color: rgb(77,77,11);

          &:hover {
            background-color: #e4e436;
            border-color: #dedf3b;
            color: #4f512d;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #e8e832;
          border-color: #eeee2b;
          color: rgb(90,90,19);

          &:hover {
            background-color: #e8e832;
            border-color: #eeee2b;
            color: rgb(90,90,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #252D47;
        border-color: #434457;
        color: rgb(191,192,195);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #31384f;
          border-color: #47495b;
          color: #b4b5b9;
        }

        &.active {
          background-color: #585664;
          border-color: #686470;
          color: rgb(249,249,250);

          &:hover {
            background-color: #595866;
            border-color: #666470;
            color: #e8e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #77717b;
          border-color: #686470;
          color: rgb(250,250,250);

          &:hover {
            background-color: #77717b;
            border-color: #686470;
            color: rgb(250,250,250);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "light",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;
